# animus

./: .clang-format  .editorconfig  .gersemirc  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Doxyfile  FEATURE_SCENES.md  README.md  STYLEGUIDE.md  mkdocs.yml
assets/: README.md
cmake/: dependencies.cmake  options.cmake
docs/: README.md  layout.xml
docs/doxygen/: layout.xml
docs/migration/: architecture_layers.md  cpp20_patterns.md  renderer_modularization_plan.md
docs/mkdocs/home/: overview.md  welcome.md
docs/mkdocs/migration/: platform_layer_plan.md  renderer_modularization_plan.md  resource_management.md
docs/style/: simple-dark.css
examples/: CMakeLists.txt  README.md
examples/space_war/: CMakeLists.txt  main.cxx
src/: FEATURE_SPEC_SCENES.md  config.hxx.in  engine.cxx  entry.cxx  game.cxx  logger.hxx  safety.cxx  safety.hxx
src/ecs/: entities.cxx  systems.cxx
src/engine/: config.hxx.in  engine.cxx  engine.hxx  logger.hxx  safety.hxx  version.hxx.in
src/engine/camera/: camera.cxx  camera.hxx
src/engine/ecs/: components.hxx  ecs_manager.cxx  ecs_manager.hxx  entities.cxx  entities.hxx  game_entities.cxx  game_entities.hxx  systems.cxx  systems.hxx
src/engine/input/: input_manager.cxx  input_manager.hxx  input_system.cxx  input_system.hxx
src/engine/renderer/: camera.cxx  camera.hxx  color.hxx  font.cxx  font.hxx  renderer.cxx  renderer.hxx  sprite.cxx  sprite.hxx  text.cxx  text.hxx  viewport.cxx  viewport.hxx
src/engine/utils/: input.cxx  input_system.cxx  input_system.hxx  resource_manager.cxx  resource_manager.hxx  resources.cxx  resources.hxx  scenes.cxx  scenes.hxx  timing.hxx  window.cxx  window.hxx
src/engine/window/: window.cxx  window.hxx
src/game/: demo_game.cxx  demo_game.hxx  dev_game.cxx  dev_game.hxx  game.cxx  game.hxx
src/renderer/: camera.cxx  camera.hxx  renderer.cxx  text.hxx
src/utils/: input.hxx  resources.cxx  scenes.cxx  timing.cxx  timing.hxx  window.cxx  window.hxx
tools/: README.md  healthy  healthy.cmd  pyproject.toml
tools/healthy/: README.md  main.py  pyproject.toml
tools/healthy-cli/: README.md  main.py  pyproject.toml
tools/healthy-cli/checks/: __init__.py  system.py  tools.py
tools/healthy-cli/core/: __init__.py  checker.py  config.py  reporter.py  types.py
tools/healthy-cli/utils/: __init__.py  installers.py
tools/toolbox/: __init__.py  documentation.py  formatting.py
